# HeyEyeUnified

./: .gitignore  CMakeLists.txt  KENLM_INTEGRATION.md  ML_INTEGRATION_SUMMARY.md  README.md  TODO.txt  build.bat
assets/: ASSETS_NEEDED.md  README.md
include/: CircularButton.h  espeakengine.h  eyeoverlay.h  gazetracker.h  keyboardview.h  keybutton.h  lightgbm_ranker.h  ml_helpers.h  ranking_features.h  settings.h  textinputengine.h
src/: EyeOverlay.cpp  GazeTracker.cpp  circularbutton.cpp  espeakengine.cpp  keyboardview.cpp  keybutton.cpp  lightgbm_ranker.cpp  main.cpp  ml_helpers.cpp  ranking_features.cpp  ranking_features_helper.cpp  settings.cpp  textinputengine.cpp
